Fixed horizontal scrollbar appearing for no reason

--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,10 @@ html {
 
 body {
     display: grid;
-    grid-template-rows: .05fr 1fr 1fr;
+    grid-template-columns: minmax(0, 1fr);
+    grid-template-rows: .05fr repeat(auto-fit, minmax(0, 1fr));
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 
@@ -43,7 +44,7 @@ body {
 }
 
 #logo {
-    padding: 8.5px;
+    padding: 9.5px;
     background-color: rgba(46, 16, 1, 0.85);
     border-radius: 15px;
     border-top-right-radius: 0px;
@@ -73,6 +74,7 @@ body {
     padding: 10px;
     display: grid;
     grid-template: 100% / repeat(3, 1fr);
+    justify-items: center;
 }
 
 .navLink {
@@ -140,8 +142,4 @@ body {
     object-fit: cover;
     max-height: 450px;
     align-self: flex-end;
-}
-
-#footer {
-    min-height: 25px;
 }
